--- a/navScroll/index.html
+++ b/navScroll/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nav Scroll</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -21,6 +21,6 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
-<script src="app.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
