--- a/navScrollTemplate/index.html
+++ b/navScrollTemplate/index.html
@@ -7,9 +7,24 @@
 </head>
 <body>
 
-<nav></nav>
+<nav>
+   
+</nav>
 
-<div class="wrapper"></div>
+<div class="wrapper">
+    <div class="section">
+        <h1>Section 1</h1>
+    </div>
+    <div class="section">
+        <h1>Section 2</h1>
+    </div>
+    <div class="section">
+        <h1>Section 3</h1>
+    </div>
+    <div class="section">
+        <h1>Section 4</h1>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
 <script src="js/app.js"></script>
